Remove base manifest and duplicate config per env;
This is due to the face that inheritance is being deprecated.
https://docs.cloudfoundry.org/devguide/deploy-apps/manifest.html#deprecated

--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -1,5 +1,9 @@
 ---
-inherit: base-manifest.yml
+buildpack: python_buildpack
+memory: 512M
+path: .
+stack: cflinuxfs2
+timeout: 180
 
 applications:
 - name: tock
