--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,8 +68,8 @@ jobs:
         environment:
           - TZ=America/New_York
           - CF_API: https://api.fr.cloud.gov
-          - CF_DEPLOY_USER: $CF_DEPLOYER_USERNAME_STAGING
-          - CF_DEPLOY_PASSWORD: $CF_DEPLOYER_PASSWORD_STAGING
+          - CF_DEPLOY_USER: $( echo $CF_DEPLOYER_USERNAME_STAGING )
+          - CF_DEPLOY_PASSWORD: $( echo $CF_DEPLOYER_PASSWORD_STAGING )
     working_directory: ~/repo
 
     steps:
