--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,15 +68,16 @@ jobs:
         environment:
           - TZ=America/New_York
           - CF_API: https://api.fr.cloud.gov
-          - CF_DEPLOY_USER: $( echo $CF_DEPLOYER_USERNAME_STAGING )
-          - CF_DEPLOY_PASSWORD: $( echo $CF_DEPLOYER_PASSWORD_STAGING )
     working_directory: ~/repo
 
     steps:
       - checkout
       - run:
           name: deploy Tock Staging to cloud.gov
-          command: cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
+          command: |
+            export CF_DEPLOY_USER=$CF_DEPLOYER_USERNAME_STAGING
+            export CF_DEPLOY_PASSWORD=$CF_DEPLOYER_PASSWORD_STAGING
+            cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
 
 workflows:
   version: 2
