--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
 
     working_directory: ~/repo
     steps:
-      - attach_to_workspace:
+      - attach_workspace:
           at: ~/repo/cf_app
       - run:
           name: deploy Tock Staging to cloud.gov
@@ -109,7 +109,7 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      - attach_to_workspace:
+      - attach_workspace:
           at: ~/repo/cf_app
       - run:
           name: deploy Tock Production to cloud.gov
