Update paths for the deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
             export CF_DEPLOY_USER=$CF_DEPLOYER_USERNAME_STAGING
             export CF_DEPLOY_PASSWORD=$CF_DEPLOYER_PASSWORD_STAGING
             cd cf_app
-            ../cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
+            cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
 
   deploy_to_production:
     docker:
@@ -118,7 +118,7 @@ jobs:
             export CF_DEPLOY_PASSWORD=$CF_DEPLOYER_PASSWORD_STAGING
             cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
             cd cf_app
-            ../cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
+            cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
 
 workflows:
   version: 2
