Just copy over all the things

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,25 +62,10 @@ jobs:
           path: test-reports
           destination: test-reports
 
-      - run:
-          name: store application to workspace
-          command: |
-            mkdir -p cf_app
-            cp -vr about.yml api-docs bin manifest-* newrelic.ini Procfile provision requirements.txt runtime.txt tock cf_app
-
       - persist_to_workspace:
-          root: cf_app
+          root: .
           paths:
-            - about.yml
-            - api-docs/*
-            - bin/*
-            - manifest-*
-            - newrelic.ini
-            - Procfile
-            - provision/*
-            - requirements.txt
-            - runtime.txt
-            - tock/*
+            - ./*
 
   deploy_to_staging:
     docker:
@@ -92,13 +77,12 @@ jobs:
     working_directory: ~/repo
     steps:
       - attach_workspace:
-          at: ~/repo/cf_app
+          at: .
       - run:
           name: deploy Tock Staging to cloud.gov
           command: |
             export CF_DEPLOY_USER=$CF_DEPLOYER_USERNAME_STAGING
             export CF_DEPLOY_PASSWORD=$CF_DEPLOYER_PASSWORD_STAGING
-            cd cf_app
             cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
 
   deploy_to_production:
@@ -111,13 +95,12 @@ jobs:
 
     steps:
       - attach_workspace:
-          at: ~/repo/cf_app
+          at: .
       - run:
           name: deploy Tock Production to cloud.gov
           command: |
             export CF_DEPLOY_USER=$CF_DEPLOYER_USERNAME_STAGING
             export CF_DEPLOY_PASSWORD=$CF_DEPLOYER_PASSWORD_STAGING
-            cd cf_app
             cf_deploy.sh tock gsa-18f-tock staging manifest-staging.yml
 
 workflows:
